Opacity:0 is not enough to hide the delete icon. Use visibility instead of display to keep the fade animation. Fix #21

--- a/code/scss/content.sass
+++ b/code/scss/content.sass
@@ -255,5 +255,7 @@ form#search.awesome-autocomplete
     width: 16px
     z-index: 100
     opacity: 0
+    visibility: hidden
     &.active
       opacity: .5
+      visibility: visible
